@@ -8,6 +8,7 @@ import fr.insee.pearljam.domain.surveyunit.port.out.view.ClosableSurveyUnitView;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -38,19 +39,20 @@ public class SurveyUnitClosingApiCsvPresenter
                         addRowWithTitleLabel(
                                 rows,
                                 vm.campaignLabel(),
-                                List.of(
+                                Arrays.asList(
                                         vm.displayName(),
                                         vm.id(),
                                         vm.interviewerLabel(),
                                         vm.interviewerId(),
                                         vm.ssech(),
+                                        vm.departement(),
+                                        vm.city(),
                                         vm.identificationState().name(),
                                         vm.contactOutcome(),
                                         vm.questionnaireState(),
                                         vm.closingCauseType()
                                 )
                         ));
-
         return new SurveyUnitClosingCsv(rows);
     }
 
